<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.ConfirmationDialogue">

<!--    Confirmation dialogue frame-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="328dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/confirmation_prompt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="75dp"
            android:layout_gravity="center"
            android:padding="0sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/do_you_really_want_to_delete_this_record"/>

        <Button
            android:id="@+id/confirmation_no_button"
            android:layout_width="122dp"
            android:layout_height="114dp"
            android:layout_marginTop="225dp"
            android:layout_marginStart="50dp"
            android:text="@string/no"
            app:backgroundTint="@color/cancel_button_color"
            app:cornerRadius="30sp" />

        <Button
            android:id="@+id/confirmation_yes_button"
            android:layout_width="122dp"
            android:layout_height="114dp"
            android:layout_marginTop="225dp"
            android:layout_marginStart="250dp"
            android:text="@string/yes"
            app:backgroundTint="@color/save_button_color"
            app:cornerRadius="30sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>