<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightEntry">

    <!-- header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_entry"
        android:fontFamily="@string/page_header_font"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="32dp"
        android:layout_height="27dp"
        android:contentDescription="@string/back_arrow"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/settings_username_label"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:fontFamily="@string/page_header_font"
        android:gravity="center"
        android:text="@string/entry_weight"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/settings_goal_weight_label"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:fontFamily="@string/page_header_font"
        android:gravity="center"
        android:text="@string/entry_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/entry_weight_textbox"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:background="@drawable/metric_border"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        app:strokeColor="@color/summary_button_color"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/entry_weight_error"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:fontFamily="@string/page_header_font"
        android:gravity="center"
        android:text=""
        android:textColor="@color/error_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/entry_date_error"
        android:layout_width="242dp"
        android:layout_height="30dp"
        android:fontFamily="@string/page_header_font"
        android:gravity="center"
        android:text=""
        android:textColor="@color/error_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <EditText
        android:id="@+id/entry_date_textbox"
        android:layout_width="171dp"
        android:layout_height="49dp"
        android:background="@drawable/metric_border"
        android:gravity="center"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:strokeColor="@color/summary_button_color"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/progress_picture_nav"
        android:layout_width="354dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/background_color"
        android:text="@string/take_a_progress_picture"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        app:strokeColor="@color/summary_button_color"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/cancel_button_color"
        app:cornerRadius="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:text="@string/save"
        app:backgroundTint="@color/save_button_color"
        app:cornerRadius="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950" />

    <Button
        android:id="@+id/delete_picture_button"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:text="@string/delete_picture"
        app:backgroundTint="@color/remove_picture_button_color"
        app:cornerRadius="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <ImageView
        android:id="@+id/picture_preview"
        android:layout_width="203dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681"
        app:srcCompat="@drawable/metric_border" />

</androidx.constraintlayout.widget.ConstraintLayout>